--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'com.tacetnox.bots'
-version '1.5.0'
+version '1.5.2'
 
 mainClassName = 'Notitia'
 
@@ -19,7 +19,7 @@ repositories {
 
 dependencies {
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.15'
-    compile 'net.dv8tion:JDA:4.0.0_61'
+    compile 'net.dv8tion:JDA:4.0.0_63'
     compile 'com.jagrosh:jda-utilities:3.0.2'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compile 'com.github.Samuel-Maddock:StrawPoll-Java-API:1.0.4'
@@ -28,3 +28,4 @@ dependencies {
 }
 
 compileJava.options.encoding = 'UTF-8'
+shadowJar.archiveFileName = 'Notitia.v' + version + ".jar"
