--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'com.tacetnox.bots'
-version '1.5.5'
+version '1.6.5'
 
 mainClassName = 'Notitia'
 
@@ -19,11 +19,12 @@ repositories {
 
 dependencies {
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.15'
-    compile 'net.dv8tion:JDA:4.0.0_68'
+    compile 'net.dv8tion:JDA:4.0.0_76'
     compile 'com.jagrosh:jda-utilities:3.0.2'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compile 'com.github.Samuel-Maddock:StrawPoll-Java-API:1.0.4'
     compile 'org.jsoup:jsoup:1.12.1'
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
 
 }
 
